found logo for Beyond The Concert and replaced font with the logo, began to make the header fixed so content will scroll behind the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,10 @@
 
 /* apply styles to <header> */
 header {
-    padding: 20px 35px;
+    width: 100%;
+    padding: 0 20px 10px 10px;
     background-color: bisque;
+    z-index: 9999;
 }
 
 
@@ -17,6 +19,7 @@ header {
 
 /* Search Form Styles Start */
 .search {
+    width: 100%;
     font-size: 15px;
     padding: 60px;
     height: 200px;
